language-platforms/java-gradle/move2kube-output/temp/myproject/deploy/yamls/java-gradle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: java-gradle
  name: java-gradle
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: java-gradle
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: java-gradle
      name: java-gradle
    spec:
      containers:
        - image: quay.io/myproject/java-gradle:latest
          imagePullPolicy: Always
          name: java-gradle
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
