language-platforms/java-gradle/move2kube-output/temp/myproject/deploy/yamls/myproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: myproject
  name: myproject
spec:
  rules:
    - host: myproject.com
      http:
        paths:
          - backend:
              service:
                name: java-gradle
                port:
                  name: port-9080
            path: /java-gradle
            pathType: Prefix
status:
  loadBalancer: {}
